# pytrace

./: .pre-commit-config.yaml  README.md  Readme.md  codecov.yml  image.py  material.py  scene.json  sphere.py  test.ppm  utils.py  vector.py
.github/actions-rs/: grcov.yml
.github/workflows/: otel-traces.yml  pre-commit.yml  test_pytrace.yml
cpp-trace/: CMakeLists.txt  coverage.info
cpp-trace/src/: vector.cpp
cpp-trace/test/: test_vector.cpp
examples/: scene1.py  scene2.py  scene2.yaml  scene4.py
pytrace/examples/: scene1.yaml  scene2.yaml  scene4.yaml  scene5.yaml  scene7.yaml
pytrace/src/: color.py  engine.py  image.py  light.py  main.py  material.py  point.py  ray.py  scene.py  scene_parser.py  sphere.py  utils.py  vector.py
pytrace/test/: scene.json  test.ppm  test_color.py  test_engine.py  test_image.py  test_material.py  test_scene.py  test_scene_parser.py  test_vector.py
renders/: blue-ball.ppm
rust-tracer/: Cargo.toml
rust-tracer/bkp/: engine.rs  main.rs  material.rs  scene_parser_test.rs  sphere.rs
rust-tracer/examples/: scene1.yaml  scene6.yaml
rust-tracer/src/: checker_material.rs  color.rs  engine.rs  image.rs  lib.rs  light.rs  main.rs  material.rs  ray.rs  scene.rs  scene_parser.rs  sphere.rs  vector.rs
rust-tracer/tests/: color_tests.rs  scene_parser_test.rs  vector_tests.rs
src/: color.py  engine.py  main.py  point.py  ray.py  scene.py  scene_parser.py
src/examples/: scene5.py
test/: test_image.py  test_scene.py  test_vector.py
